# beacon

./: .gitignore  README.md  pyproject.toml
.github/prompts/: plan-beacon.prompt.md  project-spec.prompts.md  review-against-spec.prompt.md
.github/workflows/: ci.yml  publish.yml
beacon/: __init__.py
beacon/adapters/: __init__.py  event_adapter.py
beacon/adapters/inbound/: __init__.py  matrix.py
beacon/adapters/response/: __init__.py  llm_response.py
beacon/core/: __init__.py  context.py  context_builder.py  controls.py  dispatcher.py  engine.py  event.py  llm_request.py  llm_response.py  reaction.py
beacon/infra/: __init__.py  event_bus.py  mock_dispatcher.py
beacon/reactions/: __init__.py  message_to_llm.py
docs/: releasing.md
examples/: single_room_flow.py
tests/: conftest.py  test_context_builder.py  test_controls.py  test_core_engine.py  test_event.py  test_event_bus.py  test_reaction_engine.py
